# ChiraLauncher

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  rewrite-achievement-and-scanner-pipeline_7cce44bf.plan.md  vite.config.ts
dist_debug/: index.html  overlay.html  repacks-dodi.json  repacks-fitgirl-enriched.json
dist_debug/assets/: main-CxsRVnf2.css  main-Rbe3U13G.js  overlay-DJYU-M92.js  window-BT_EWZIW.js
scripts/: distribute.js
src/: App.tsx  Browse.tsx  Discover.tsx  Downloads.tsx  Favorites.tsx  LaunchSplash.tsx  Library.tsx  Messages.tsx  Settings.tsx  UserPage.tsx  index.css  main.tsx  overlay.tsx  repacks-fitgirl.json  repacks.json  tauri.d.ts
src-tauri/: .env  .env.example  Cargo.toml  build.rs  cargo.json  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/resources/: scanner.py
src-tauri/src/: achievement_watcher.rs  dummy_test.rs  lib.rs  main.rs  state.rs  stats.rs  steamworks_sync.rs  tray.rs
src-tauri/src/achievements/: cache.rs  fetcher.rs  ini_parser.rs  mod.rs
src-tauri/src/commands/: achievements.rs  cleaner.rs  folder.rs  game.rs  http_dl.rs  import.rs  launcher.rs  metadata.rs  mod.rs  repacks.rs  reset.rs  scanner.rs  torrent.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs  writer.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/metadata/: image_cache.rs  mod.rs  offline.rs  provider.rs
src-tauri/src/os_integration/: mod.rs
src-tauri/src/patcher/: mod.rs
src-tauri/src/process/: identity.rs  mod.rs  monitor.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/settings/: commands.rs  mod.rs  store.rs
src-tauri/src/torrent/: mod.rs
src/components/downloads/: DownloadUtils.ts  UnifiedDownloadCard.tsx
src/components/extensions/: ConsentWarning.tsx  ExtensionManager.tsx  PluginSandbox.tsx
src/components/game/: AchievementGrid.tsx  ExecutionMethodSettings.tsx  GameCard.tsx  OsIntegrationPanel.tsx  RepackAchievementGrid.tsx
src/components/layout/: AppLayout.tsx  ErrorBoundary.tsx  Sidebar.tsx  TitleBar.tsx
src/components/modals/: AddGameModal.tsx  AppIdManagerModal.tsx  AuthModal.tsx  BulkLinkModal.tsx  DirectoryScannerModal.tsx  EditGameModal.tsx  FirstLaunchModal.tsx  FolderBuilderModal.tsx  LibrarySettingsModal.tsx  RemoveGameModal.tsx  ResetAppModal.tsx  TorrentFileModal.tsx
src/components/overlay/: AchievementBadge.tsx  AchievementOverlay.tsx  AchievementToast.tsx  GameStartToast.tsx  overlay-types.ts
src/components/settings/: AchievementDebugPanel.tsx
src/components/ui/: Clock.tsx  ConnectButton.tsx  ContextMenu.tsx  DownloadManager.tsx  (+3 more)
src/hooks/: useLocalImage.ts
src/lib/: format.ts  supabase.ts  syncEngine.ts  utils.ts  xp.ts
src/pages/: Library.tsx  TrayMenu.tsx
src/scanner/: scanner.py
src/services/: ImageCacheService.ts  SmartAudio.ts  ThemeEngine.ts  achievementService.ts  gameService.ts  settingsService.ts  steamService.ts
src/store/: downloadsStore.ts  extensionStore.ts  folderStore.ts  gameStore.ts  httpStore.ts  osIntegrationStore.ts  processStore.ts  profileStore.ts  repackStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: game.ts
(+5 files in other folders)
