[package]
name = "chiralauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "chiralauncher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chiralauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "add_notepad"
path = "src/bin/add_notepad.rs"

[[bin]]
name = "check_playtime"
path = "src/bin/check_playtime.rs"

[[bin]]
name = "mock_game"
path = "src/bin/mock_game.rs"

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-opener = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2     = "0.8"
r2d2_sqlite = "0.24"

# Process detection (replaces raw kill/OpenProcess)
sysinfo = { version = "0.31", default-features = false, features = ["system"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP (IGDB, Steam API, image download)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Data & serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

# Utilities
fuzzy-matcher = "0.3"
image         = "0.25"
dirs          = "5"
anyhow        = "1"
log           = "0.4"
env_logger    = "0.11"
dotenvy       = "0.15"

# Metadata & Processing
async-trait = "0.1"
regex       = "1.10"
lazy_static = "1.4"
sha2        = "0.10"
walkdir     = "2.4"
rayon       = "1.8"
rand        = "0.8"
rust-ini    = "0.21"
encoding_rs = "0.8"
tempfile    = "3.10"
mslnk       = "0.1.8"
winreg      = "0.52"
hex         = "0.4"
notify      = "6.1"

# OS keychain for secrets (IGDB / Steam API keys)
keyring = "2"
urlencoding = "2.1.3"
tauri-plugin-deep-link = "2"
librqbit = "8.1.1"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rand_core = "0.10.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Cross-platform process start time (for PID reuse hardening)
# Windows: uses GetProcessTimes via windows-sys
# Linux/macOS: reads /proc/{pid}/stat or sysctl
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Security", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Registry"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
